@@ -1,21 +1,0 @@
-{
-  "sort": [
-    "@timestamp", 
-    "desc"
-  ], 
-  "hits": 0, 
-  "description": "", 
-  "title": "Default Search", 
-  "version": 1, 
-  "kibanaSavedObjectMeta": {
-    "searchSourceJSON": "{\"index\":\"logstash-*\",\"highlight\":{\"pre_tags\":[\"@kibana-highlighted-field@\"],\"post_tags\":[\"@/kibana-highlighted-field@\"],\"fields\":{\"*\":{}},\"fragment_size\":2147483647},\"filter\":[],\"query\":{\"query_string\":{\"query\":\"*\",\"analyze_wildcard\":true}}}"
-  }, 
-  "columns": [
-    "method", 
-    "type", 
-    "path", 
-    "responsetime", 
-    "status", 
-    "query"
-  ]
-}
